--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-09-27 21:23+0200\n"
+"POT-Creation-Date: 2023-09-27 22:53+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -17,6 +17,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
 #: .\products\models.py:20
 msgid "Name"
 msgstr "Name"
@@ -72,3 +73,21 @@ msgstr "Rate"
 #: .\products\models.py:97
 msgid "create date"
 msgstr "Date"
+
+#: .\templates\base.html:177
+msgid "Home"
+msgstr "Start"
+
+#: .\templates\base.html:181
+msgid "Shop"
+msgstr "Shoping"
+
+#: .\templates\base.html:185
+#, fuzzy
+#| msgid "brand"
+msgid "Brands"
+msgstr "Brand"
+
+#: .\templates\base.html:188
+msgid "Orders"
+msgstr "Bestellungen"
